# smarthome

./: .gitignore  Cargo.toml  README.md  TASK_DZ2.md  questions.md  questions_dz2.md
.github/workflows/: ci.yml
app/: Cargo.toml
app/src/: main.rs
examples/: demo_hashmap.rs  mocks.rs
home/: Cargo.toml
home/src/: lib.rs  mock.rs  real.rs
logger/: Cargo.toml
logger/src/: lib.rs
src/: lib.rs  main.rs  mock.rs  real.rs
src/legacy/: house.rs  mod.rs  non_empty_vec.rs  room.rs
src/new/: house.rs  mod.rs  room.rs
utils/: mod.rs
