[package]
name = "projlogged"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
tracing.workspace = true
tracing-appender.workspace = true
tracing-subscriber.workspace = true

[workspace.dependencies]
anyhow = "1.0.102"
tracing = "0.1.44"
tracing-appender = "0.2.4"
tracing-subscriber = { version = "0.3.23", features = ["json"] }

[profile.dev]
debug = "line-tables-only"

[workspace]
members = ["app", "home","logger"]

