[package]
name = "home"
version = "0.1.0"
edition = "2024"

[features]
default = ["mock"] # включить флаг mock по-умолчанию
mock = ["rand"] # использовать рандимозатор только при включенном флаге
mock-persistent = ["rand"]

[dependencies]
logger = { path = "../logger" }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-appender = { workspace = true }
tracing-subscriber = { workspace = true }
rand = { version = "0.10.0", optional = true } # опциональный рандомизатор
thiserror = "2.0.18"
